Testing game-container 90vh to see if solves issue on ios with scrolling

--- a/assets/style.css
+++ b/assets/style.css
@@ -29,7 +29,7 @@ body {
   -webkit-box-pack: center;
   -ms-flex-pack: center;
   justify-content: center;
-  height: 100vh;
+  height: 90vh;
   width: 100vw;
   position: relative;
   text-align: center;
